efectos y avances hasta clase 21

--- a/src/css/NewTask.css
+++ b/src/css/NewTask.css
@@ -67,6 +67,9 @@
         height: 30%;
         margin-top: 20px;
     }
+    .new-task--title{
+        margin: 2px;
+    }
     .cat-picture{
         display: none;
     }
