--- a/src/css/MyTasks.css
+++ b/src/css/MyTasks.css
@@ -81,7 +81,6 @@
     padding: 15px;
 }
 
-
 .icon {
     font-size: 2.5rem;
     font-weight: bold;
@@ -113,6 +112,52 @@
 .item-p{
     font-size: 1.4rem;
     margin-left: 15px;
+}
+
+/*Empty Todos*/
+.empty-container{
+    width: 100%;
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 10px;
+    background-color: coral;
+    color: #000;
+    text-align: center;
+    font-size: 1.9rem;
+}
+
+/*Loading Todos*/
+.lds-hourglass {
+    overflow-y: none;
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+.lds-hourglass:after {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 8px;
+    box-sizing: border-box;
+    border: 32px solid coral;
+    border-color: coral transparent coral transparent;
+    animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+    0% {
+        transform: rotate(0);
+        animation-timing-function: cubic-bezier(0.30, 0.70, );
+    }
+    50% {
+        transform: rotate(900deg);
+        animation-timing-function: cubic-bezier(0.50, 1);
+    }
+    100% {
+        transform: rotate(1800deg);
+    }
 }
 
 /*Mobile*/
